# strip-literal

./: package.json  pnpm-lock.yaml
bench/: index.bench.ts
src/: acorn.ts
swc-lexer/: Cargo.toml  index.d.ts  index.js  package.json
swc-lexer-wasm/: Cargo.toml
swc-lexer-wasm/src/: lib.rs
swc-lexer/npm/darwin-arm64/: README.md  package.json
swc-lexer/npm/darwin-x64/: README.md  package.json
swc-lexer/npm/linux-arm64-gnu/: README.md  package.json
swc-lexer/npm/linux-arm64-musl/: README.md  package.json
swc-lexer/npm/linux-x64-gnu/: README.md  package.json
swc-lexer/npm/linux-x64-musl/: README.md  package.json
swc-lexer/npm/win32-x64-msvc/: README.md  package.json
swc-lexer/src/: lib.rs
